# cmake-general-library

./: CMakeLists.txt
cmake/: compiler_settings.cmake  configuration.cmake
general_lib.cli.bridge/cli.bridge/: CMakeLists.txt
general_lib.core/: CMakeLists.txt
general_lib.core/core/: CMakeLists.txt
general_lib.core/core/src/: general_lib.cpp
general_lib.core/unittests/: CMakeLists.txt
general_lib.core/unittests/include/: base_fixture.h  common_fixture.h  test_configuration.h
general_lib.core/unittests/src/: common_unittests.cpp  main.cpp  test_configuration.cpp
general_lib.core/unittests_framework/: CMakeLists.txt
general_lib.core/unittests_framework/include/: json_fixture.h  test_configuration.h
general_lib.core/unittests_framework/src/: main.cpp  test_configuration.cpp
general_lib.wrapper/wrapper/: CMakeLists.txt
